# EDITH

./: .env.example  .gitignore  README.md  launch_edith.bat  main.py  pyproject.toml  requirements.txt
edith_app/: __init__.py  __main__.py  app.py  assistant.py  config.py  models.py  ui.py
edith_app/core/: agent_loop.py  planner.py  session_memory.py  task_queue.py  tool_registry.py  verifier.py
edith_app/services/: __init__.py  agent_service.py  audio_service.py  bootstrap_service.py  connectivity_service.py  knowledge_service.py  logging_service.py  media_service.py  memory_service.py  notes_service.py  self_improve_service.py  system_service.py  vision_service.py  voice_service.py  whatsapp_service.py
scripts/: setup_windows.ps1
